# aggiequant-prediction-markets

./: .gitignore  LICENSE  README.md  REFERENCES.md  pyproject.toml
.github/workflows/: check.yml
data/: sample_markets.csv
docs/: architecture.md  handoff.md  results.md
notebooks/: 01_walkthrough.py  02_kalshi_research_notebook.py  README.md
src/: prediction_markets.py
src/aggie_pm/: __init__.py  backtest.py  case_study.py  cli.py  data.py  diagnostics.py  features.py  kalshi.py  models.py  pareto.py  relative_value.py  report.py
tests/: conftest.py  test_backtest.py  test_case_study.py  test_cli.py  test_data.py  test_diagnostics.py  test_features.py  test_kalshi.py  test_models.py  test_pareto.py  test_relative_value.py
