[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aggie-pm"
version = "0.1.0"
description = "Prediction-market probability modeling, calibration, and walk-forward backtesting with fractional Kelly sizing."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Dylan Bago", email = "dylanbago@gmail.com" }
]
keywords = ["quant", "prediction-markets", "calibration", "kelly", "backtest"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.scripts]
aggie-pm = "aggie_pm.cli:main"

[project.urls]
Homepage = "https://github.com/DB825/aggiequant-prediction-markets"
Issues = "https://github.com/DB825/aggiequant-prediction-markets/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["aggie_pm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning",
]
